Fix spacing issues on code page

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -9,7 +9,7 @@ body {
 
 #header-bar {
     height: 30px;
-    margin-left: 8px;
+    margin-left: 5px;
     margin-top: 5px;
     display: flex;
     margin-right: 8px;
@@ -31,8 +31,8 @@ body {
 }
 
 #header-logo {
-    margin-left: 5px;
     margin-top: 5px;
+    margin-left: 2px;
     height: 20px;
     width: 20px;
     background-image: url('./codeconnected.png');
@@ -43,7 +43,7 @@ body {
 #avatar {
     height: 15px;
     width: 15px;
-    margin-right: 10px;
+    margin-right: 2px;
     margin-top: 5px;
 }
 
@@ -251,6 +251,7 @@ body {
     cursor: col-resize;
     height: 100%;
     width: auto;
+    padding: 0 2px;
     display: flex;
     justify-content: center;
     align-items: center;
